# mini2

./: .gitignore  CMakeLists.txt  README.md  RESEARCH_REPORT.md  run_cluster.ps1  run_cluster.sh  run_experiments.ps1
config/: grid_nodes.csv
cpp/client/: basecamp_client.cpp  query_client.cpp
cpp/common/: Config.cpp  Config.hpp  CsvLibrary.cpp  CsvLibrary.hpp  DobTask.cpp  DobTask.hpp  QueryEngine.cpp  QueryEngine.hpp
cpp/server/: node_server.cpp
proto/: basecamp.proto
python/: analyze_steal_params.py  build_proto.ps1  build_proto.sh  node_server.py  requirements.txt  visualize_queues.py
reference/: mini2-chunks.md
reference/basic/: CMakeLists.txt  README.md  gRPCConfig.cmake.in
reference/basic/python/: build.sh
reference/basic/python/src/: basic_client.py
reference/basic/resources/: basic.proto
reference/basic/src/client/: client.cc  wrapper.h
reference/basic/src/server/: basicImpl.cc  basicImpl.h  server.cc
